force-app/main/default/objects/ICT_Meeting_Member__c/ICT_Meeting_Member__c.object-meta.xml
<CustomObject>
    <description>This is used to indicate both who was invited to an ICT meeting and who ultimately attended.</description>
    <label>ICT Meeting Member</label>
    <nameField>
        <displayFormat>ICTM-{00000}</displayFormat>
        <label>ICT Meeting Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICT Meeting Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>