force-app/main/default/objects/ICT_Meeting_Member__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ICT Meeting Members</relationshipLabel>
    <relationshipName>ICT_Meeting_Members</relationshipName>
    <type>Lookup</type>
</CustomField>