force-app/main/default/objects/ICT_Meeting_Member__c/fields/Date_Time_Invited__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Invited__c</fullName>
    <label>Date/Time Invited</label>
    <type>DateTime</type>
</CustomField>