force-app/main/default/objects/ICT_Meeting_Member__c/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <label>Member Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>