force-app/main/default/objects/ICT_Meeting_Member__c/fields/ICT_Meeting__c.field-meta.xml
<CustomField>
    <fullName>ICT_Meeting__c</fullName>
    <label>ICT Meeting</label>
    <referenceTo>ICT_Meeting__c</referenceTo>
    <relationshipLabel>ICT Meeting Members</relationshipLabel>
    <relationshipName>ICT_Meeting_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>