force-app/main/default/objects/ICT_Meeting_Member__c/fields/Is_Me__c.field-meta.xml
<CustomField>
    <fullName>Is_Me__c</fullName>
    <formula>IF( Person__c = $User.Id , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Me</label>
    <type>Checkbox</type>
</CustomField>