force-app/main/default/objects/ICT_Meeting_Member__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ICT_Meeting_Members</relationshipName>
    <type>Lookup</type>
</CustomField>