force-app/main/default/objects/ICT_Meeting_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Behavioral Health Specialist</fullName>
            </value>
            <value>
                <fullName>Care Manager</fullName>
            </value>
            <value>
                <fullName>Insurance Coordinator</fullName>
            </value>
            <value>
                <fullName>Lead Care Manager (RN)</fullName>
            </value>
            <value>
                <fullName>Main Care Giver</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>PCP</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Social Worker</fullName>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>