force-app/main/default/objects/ICT_Meeting_Member__c/fields/Title_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Title_Credentials__c</fullName>
    <formula>Person__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title/Credentials</label>
    <type>Text</type>
</CustomField>